# sudoke

./: .env.example  .eslintrc.js  .gitignore  AGENTS.md  DEVELOPER_SETUP.md  EPIC_PLAN_UPDATED.md  INFRA_EPICS.md  MVP_EPIC_PLAN.md  PENDING_TASKS.md  README.md  competitive_social_sudoku_prd.docx  competitive_social_sudoku_prd.md  docker-compose.yml  import_plan.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_baseline_schema.py  0002_rating_leaderboards.py  0003_social_streaks.py  0004_push_tokens.py
apps/api/scripts/: ingest_puzzle_bank.py  quarantine_invalid_puzzles.py  seed_demo.py
apps/api/src/: config.py  main.py
apps/api/src/db/: base.py  session.py
apps/api/src/jobs/: __init__.py  tick.py  worker.py
apps/api/src/middleware/: auth.py  logging.py  principal.py
apps/api/src/models/: __init__.py  attempts.py  audit.py  guest.py  push.py  puzzles.py  rating.py  social.py  streaks.py  users.py
apps/api/src/schemas/: common.py
apps/api/src/services/: __init__.py  archive.py  attempts.py  audit.py  leaderboards.py  notifications.py  puzzles.py  rating.py  social.py  (+2 more)
apps/api/tests/: conftest.py  test_api_endpoints.py  test_archive_api.py  test_attempt_lifecycle.py  test_auth_middleware.py  test_ingest_puzzle_bank.py  test_leaderboards_api.py  test_notifications_api.py  test_puzzle_service.py  test_rating_service.py  test_social_api.py  test_streaks_api.py  test_sudoku_engine.py  test_worker_jobs.py
(+98 files in other folders)
